[package]
name = "embootleby"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
byteorder = "1.4.3"
clap = { version = "4.2.4", features = ["wrap_help"] }
hex = "0.4.3"
lpc55_areas = { git = "https://github.com/oxidecomputer/lpc55_support/", version = "0.2.2" }
lpc55_isp = { git = "https://github.com/oxidecomputer/lpc55_support/", version = "0.2.2" }
lpc55_sign = { git = "https://github.com/oxidecomputer/lpc55_support/", version = "0.2.2" }
packed_struct = "0.10.1"
parse_int = "0.6.0"
serialport = { git = "https://github.com/jgallagher/serialport-rs", branch = "illumos-support", version = "4.2.1-alpha.0", default-features = false }
sha2 = "0.10.6"
zip = "0.6.4"
